# laila-core

./: .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  __init__.py  conftest.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: dependabot-auto-merge.yml  dependency-verify.yml  publish-to-pypi.yml
atomic/: __init__.py
atomic/definitions/: __init__.py  globally_atomic_identifiable_object.py  identifiable_object.py  locally_atomic_identifiable_object.py  locally_atomic_object.py
atomic/types/: __init__.py  atomic_dict.py  atomic_dotmap.py  atomic_flag.py  atomic_int.py  atomic_list.py  atomic_str.py
basics/: __init__.py
basics/definitions/: __init__.py  cli_capable.py  identifiable_object.py
docs/: gen_ref_pages.py  gen_tutorial_nav.py  index.md  laila_101.md
docs/hooks/: notebook_download.py
docs/stylesheets/: notebook.css  retro.css
docs/tutorials/: 01_entries_and_identity.md  01a_variables_and_evolution.md  02_local_pools.md  03_s3_tensors.md  04_model_checkpoint.md  05_manifest_sentiment_dataset.md  06_pool_proxies.md  07_async_futures.md  07a_logger.md  08a_environment_to_s3.md  08b_policy_from_manifest.md  09_peer_request_entry.md  10_peer_remote_s3.md  11_constitutions_and_build.md  12_process_pool_taskforce.md  13_cli_and_toml_config.md  14_multi_pool_routing.md  15_pool_migration.md  16_future_bank_deep_dive.md  17_three_node_mesh.md  18_encryption.md  19_object_stores_beyond_aws.md  20_structured_backends.md  21_huggingface_publishing.md  22_custom_serializer.md  23_custom_pool_backend.md
entry/: __init__.py  entry.py  entry_constitution.py  entry_metadata.py  entry_state.py  exceptions.py
entry/compdata/: __init__.py
entry/compdata/taxonomy/: __init__.py  cd_dict.py  cd_list.py  cd_numpy.py  cd_object.py  cd_torch.py  compdata.py
entry/compdata/transformation/: __init__.py  base.py
entry/compdata/transformation/base64/: __init__.py  base64.py
entry/compdata/transformation/compression/: __init__.py  zlib.py
entry/compdata/transformation/encryption/: __init__.py  encryption.py
entry/compdata/transformation/jsonstring/: __init__.py  jsonstring.py
entry/compdata/transformation/serialization/: __init__.py  msgpack.py  numpy.py  pickle.py  torch.py
entry/constitution/: __init__.py  build_maps.py  complex_constitution.py  constitution.py  entry_constitution.py  recovery_maps.py  simple_constitution.py
examples/communication/localhost/: peer_active_policy.ipynb  remote_future_introspection.ipynb
examples/communication/tcpip/: peer_cross_machine.ipynb
examples/datasets/cifar_multipart/: train_simple_cifar.ipynb  upload_cifar_10_s3.ipynb
examples/datasets/custom_image/: create_custom_image_s3.ipynb  doit.md  remember_custom_image_s3.ipynb
examples/datasets/mnist/: train_simple_mnist.ipynb  upload_mnist_s3.ipynb
examples/guarantee/: guarantee_random_images_s3.ipynb
examples/multipool/: duplicate_s3_to_hdf5.ipynb  example_hybrid_s3_cloudflare_tensors.ipynb
examples/simple/: data_types.ipynb  environment_dump.ipynb
examples/simple/communication/: peer_active_policy.ipynb
examples/simple/file_upload/: file_upload_cloudflare.ipynb
examples/simple/guarantee/: guarantee_random_images_s3.ipynb
examples/simple/model_storage/: complex_entry_torch_model.ipynb  example_cnn_weights_s3.ipynb
examples/simple/tensor_storage/: filesystem_random_tensors.ipynb  huggingface_random_tensor.ipynb  random_matmul_s3.ipynb  random_sentences_s3_async.ipynb
hooks/: pre-commit
logger/: __init__.py  logger.py  record.py
macros/: __init__.py  aliases.py  defaults.py  strings.py
policy/: README.md  __init__.py
policy/central/: README.md  __init__.py
policy/central/command/: README.md  __init__.py
policy/central/communication/: README.md  __init__.py  connection.py  protocol.py  proxy.py
policy/central/control/: README.md
policy/central/memory/: README.md  __init__.py
policy/schema/: __init__.py  base.py
pool/: __init__.py
pool/azure/: __init__.py  azure.py
pool/backblaze/: __init__.py  backblaze.py
pool/boto/: __init__.py  boto.py
pool/cloudflare/: __init__.py  cloudflare.py
pool/duckdb/: __init__.py  duckdb.py
pool/filesystem/: __init__.py  filesystem.md  filesystem.py
pool/gcs/: __init__.py  gcs.py
pool/hdf5/: __init__.py  hdf5.py
pool/huggingface/: __init__.py  huggingface.py
pool/mongo/: __init__.py  mongo.py
pool/postgres/: __init__.py  postgres.py
pool/redis/: __init__.py  redis.py
pool/s3/: __init__.py  s3.py
pool/schema/: __init__.py  base.py  pool_wrapper.py
pool/sqlite/: __init__.py  sqlite.py
runtime/: __init__.py
tutorials/: 01_entries_and_identity.ipynb  02_local_pools.ipynb  03_remote_pools.ipynb  03_s3_tensors.ipynb  04_manifest_model_checkpoint.ipynb  04_model_checkpoint.ipynb  05_manifest_sentiment_dataset.ipynb  06_pool_proxies.ipynb  07_async_futures.ipynb  README.md
tutorials/01_basics/: 01_entries_and_identity.ipynb  01a_variables_and_evolution.ipynb  02_local_pools.ipynb  03_remote_pools.ipynb  04_manifest_model_checkpoint.ipynb  05_manifest_sentiment_dataset.ipynb  06_pool_proxies.ipynb  07_async_futures.ipynb  07a_logger.ipynb
tutorials/02_intermediate/: 08a_environment_to_s3.ipynb  08b_policy_from_manifest.ipynb  09_peer_request_entry.ipynb  10_peer_remote_s3.ipynb  11_constitutions_and_build.ipynb  12_process_pool_taskforce.ipynb  13_cli_and_toml_config.ipynb  14_multi_pool_routing.ipynb  15_pool_migration.ipynb  16_future_bank_deep_dive.ipynb  17_three_node_mesh.ipynb
tutorials/03_advanced/: 18_encryption.ipynb  19_object_stores_beyond_aws.ipynb  20_structured_backends.ipynb  21_huggingface_publishing.ipynb  22_custom_serializer.ipynb  23_custom_pool_backend.ipynb
utils/: __init__.py  gaurantee.py  guarantee.py
utils/args/: __init__.py  args.md  args.py
utils/decorators/: __init__.py  synchronized.py  typecheck.py
(+114 files in other folders)
