[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laila-core"
version = "1.0.4"
description = "Lambda's Interdisciplinary Large Atlas"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Amir Zadeh" },
]
dependencies = [
  "pydantic",
  "dotmap",
  "msgpack",
  "websockets",
  "jsonrpcserver",
  "numpy",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
s3 = ["boto3"]
cloudflare = ["boto3"]
backblaze = ["boto3"]
gcs = ["google-cloud-storage"]
azure = ["azure-storage-blob"]
postgres = ["psycopg[binary]"]
mongo = ["pymongo"]
redis = ["redis"]
duckdb = ["duckdb"]
hdf5 = ["h5py"]
huggingface = ["huggingface_hub"]
crypto = ["cryptography"]
torch = ["torch", "pillow"]
imaging = ["imageio", "pillow"]
docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
]
dev = [
  "pytest",
  "nbstripout",
]
all = [
  "boto3",
  "google-cloud-storage",
  "azure-storage-blob",
  "psycopg[binary]",
  "pymongo",
  "redis",
  "duckdb",
  "h5py",
  "huggingface_hub",
  "cryptography",
  "torch",
  "pillow",
  "imageio",
]

[project.urls]
Homepage = "https://github.com/LambdaLabsML/laila-core"
Repository = "https://github.com/LambdaLabsML/laila-core"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = [
  "tests*",
  "examples*",
  "_dev*",
  "docs*",
  "vault*",
  "hooks*",
  "build*",
  "site*",
  "__pycache__*",
  ".pytest_cache*",
  "laila_core.egg-info*",
  ".venv*",
  ".github*",
  ".cursor*",
]
namespaces = false

[tool.setuptools.package-data]
"laila" = ["tutorials/**/*.ipynb", "tutorials/**/*.md"]

[tool.setuptools.package-dir]
laila = "."

